bugfix: score