@@ -4,74 +4,91 @@ import Model.Challenge;
 import Model.TrainnerSession;
 import Model.User;
 
-import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
 
 public class Menu {
 
+    private User userInitializer = new User("Laura");
+
     // protótipo do banco de dados
     private Scanner reader = new Scanner(System.in);
-    private   List<Challenge> challengesPersonalizes = List.of(
-            new Challenge( "Desafio 1", "Descrição do Desafio 1", "Easy", 10),
-            new Challenge( "Desafio 2", "Descrição do Desafio 2", "Medium", 20),
-            new Challenge( "Desafio 3", "Descrição do Desafio 3", "Hard", 30)
+    private List<Challenge> challengesPersonalizes = Arrays.asList(
+            new Challenge("Desafio 1", "Descrição do Desafio 1", "Easy", 10),
+            new Challenge("Desafio 2", "Descrição do Desafio 2", "Medium", 20),
+            new Challenge("Desafio 3", "Descrição do Desafio 3", "Hard", 30)
     );
 
-    private   List<Challenge> challengesDatabase = List.of(
-            new Challenge( "Desafio 1", "Descrição do Desafio 1", "Easy", 10),
-            new Challenge( "Desafio 2", "Descrição do Desafio 2", "Medium", 20),
-            new Challenge( "Desafio 3", "Descrição do Desafio 3", "Hard", 30),
-            new Challenge( "Desafio 1", "Descrição do Desafio 1", "Easy", 10),
-            new Challenge( "Desafio 2", "Descrição do Desafio 2", "Medium", 20),
-            new Challenge( "Desafio 3", "Descrição do Desafio 3", "Hard", 30)
+    private List<Challenge> challengesDatabase = Arrays.asList(
+            new Challenge("Desafio 1", "Descrição do Desafio 1", "Easy", 10),
+            new Challenge("Desafio 2", "Descrição do Desafio 2", "Medium", 20),
+            new Challenge("Desafio 3", "Descrição do Desafio 3", "Hard", 30),
+            new Challenge("Desafio 1", "Descrição do Desafio 1", "Easy", 10),
+            new Challenge("Desafio 2", "Descrição do Desafio 2", "Medium", 20),
+            new Challenge("Desafio 3", "Descrição do Desafio 3", "Hard", 30)
     );
 
-    public void ShowMenu(){
-       // User UserLog = new User();
+    private int aux = 0;
 
-        String menu = """
-            1. Iniciar Sessão de Treinamento 
-            2. Ver todos Desafios 
-            4. Ver Ranking
-            0. Sair
-            Selecione a sua opção ->                             
-            """;
-        System.out.println(menu);
+    public void ShowMenu() {
+        while (true) {
+            String menu = """
+                1. Iniciar Sessão de Treinamento 
+                2. Ver todos Desafios 
+                3. Ver Ranking
+                0. Sair
+                Selecione a sua opção ->                             
+                """;
+            System.out.println(menu);
+            int userInput = reader.nextInt();
+            switch (userInput) {
+                case 1 -> intoSessionTraining();
+                case 2 -> intoChallenge();
+                case 3 -> viewRanking();
+                case 0 -> {
+                    System.out.println("Saindo...");
+                    reader.close();
+                    return;
+                }
+                default -> System.out.println("Opção inválida");
+            }
+        }
+    }
+
+    public void intoSessionTraining() {
+
+        TrainnerSession sessionInitializer = new TrainnerSession(userInitializer, challengesPersonalizes);
+
+        sessionInitializer.ShowInfoUser();
+        sessionInitializer.showUserChallenges();
+
+        System.out.println("Gostaria de iniciar a trilha 1 para sim 2 para não:");
         int userInput = reader.nextInt();
-        switch (userInput) {
-            case 1:
-                IntoSessionTrainig();
-                break;
-            case 2:
-                intoChallenge();
-                break;
-            case 3:
-                break;
-            case 0:
-                System.out.println("Saindo...");
-                break;
-            case 4:
-                break;
 
-            default:
-                System.out.println("Opção inválida");
-                break;
+        if (userInput == 1) {
+            if (aux < challengesPersonalizes.size()) {
+                System.out.println("Inicializando este desafio");
+                Challenge actualChallenge = challengesPersonalizes.get(aux);
+                System.out.println(actualChallenge);
+                actualChallenge.completeChallenge(userInitializer);
+
+                aux++;
+            } else {
+
+            }
         }
-
-    }
-    public  void IntoSessionTrainig(){
-
-        User UserInitializer = new User("Laura");
-        TrainnerSession Sessioninittilizer = new TrainnerSession(UserInitializer,challengesPersonalizes);
-        Sessioninittilizer.ShowInfoUser();
-        Sessioninittilizer.showUserChallenges();
     }
 
-    public void intoChallenge(){
-        for(int i = 0 ; i < challengesDatabase.size(); i++){
-            System.out.println(challengesDatabase.get(i));
+    public void intoChallenge() {
+        for (Challenge challenge : challengesDatabase) {
+            System.out.println(challenge);
         }
+    }
+
+    public void viewRanking() {
+        // Implement ranking view logic
+        System.out.println("Ranking feature not yet implemented.");
     }
 
 }
